Initial commit with folder

--- a/Lab1/1-image-representation.ipynb
+++ b/Lab1/1-image-representation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 as cv #for imaging reprocessing\n",
+    "import cv2 as cv #open cv python library for computer vision and image preprocessing\n",
     "import matplotlib.pyplot as plt\n",
     "#computer vision:object detection , image clasisification and segmentation"
    ]
@@ -506,6 +506,13 @@
     "cv.imwrite(\"circle.jpg\",canvas)\n",
     "cv.waitKey(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
