--- a/Lab1/2-image-reprocessing.ipynb
+++ b/Lab1/2-image-reprocessing.ipynb
@@ -14,7 +14,7 @@
     "#imutils.resize(image,width=)\n",
     "#cv.flip(image,0 or 1)\n",
     "#cv.rectangle(where at which picture,(starting point),(ending point),color,thickness)....creatig rectangle\n",
-    "#cv,circle(where, (cen,ter),radius,color,thickness)\n",
+    "#cv.circle(where, (cen,ter),radius,color,thickness)\n",
     "#bitwise merging two images we have and or xor\n",
     "#cv.calcHist([image3],[0],None,[256],[0,256]) ... takes array of image, number of channel,mask,size,xaxis length\n",
     "#cv.erode(image,kernel,iterations=5) and cv.dilate kernel ... np.ones((si,ze),dtype=int)\n",
@@ -102,7 +102,7 @@
     "#translation means shift image along xaxis and yaxis\n",
     "m=np.float32([\n",
     "    [1,0,25],\n",
-    "    [0,1,30]\n",
+    "    [0,1,50]\n",
     "])#25(tx) pixel shift (along xaxis) left or right where as 50(ty) pixels shift up or down\n",
     "shifted1=cv.warpAffine(image,m,(image.shape[1],image.shape[0]))\n",
     "#wrapAffine for translation takes image,matrix ,width and height(size of output image , dimension)\n",
