--- a/lab3/yolo.ipynb
+++ b/lab3/yolo.ipynb
@@ -4,19 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yolo: You look only once\n",
-    "1. Residuel block: divide image into sxs grid cell, each cell in grid is responsible for predicting class of object that it covers.\n",
-    "\n",
-    "2. Bounding Box Region: For each detected object, YOLO will draw a bounding box around it and label it with the predicted class. It will also display a confidence score (probability) that the object belongs to the predicted class.\n",
-    "3. Intersection over union(iou is value btw 0 and 1):3na two boxes w 3ndn # classess mn5d intersection of unoion(gam3 sortyn y3ni union) lal sorty l intersection yali akbr mn union 50% howe l object detected. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "1. open venv and install : \n",
-    "-git clone https://github.com/ultralytics/yolov5 (library y3ni giha yali 3mlt yolov5)(Clones the entire YOLOv5 repository from GitHub, which includes the full code, training scripts, configuration files, and pre-trained models.)\n",
+    "-git clone https://github.com/ultralytics/yolov5 (Clones the entire YOLOv5 repository from GitHub, which includes the full code, training scripts, configuration files, and pre-trained models.)\n",
     "\n",
     "-pip install ultralytics(Installs the Ultralytics package)(it automatically installs PyTorch(deeplearframework))\n",
     "\n",
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +411,7 @@
     "#we will draw (plot) boxes\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as patches #patch isshape(circle,recta...)\n",
+    "import matplotlib.patches as patches #patch is shape(circle,recta...)\n",
     "def plotboxes(path,results):\n",
     "    image=Image.open(path)\n",
     "    plt.figure(figsize=(12,8))\n",
